src/serde-xml/ReflectionTypeNameParser/ReflectionTypeName.g4
grammar ReflectionTypeName;

topTypeName : fullType EOF ;
fullType : typeName generics? ;
typeName : qualifiedName BRACKETS* ;
qualifiedName : ( IDENT '.' )* IDENT ;
generics : '`' NUM* '[' fullType ']' ;

BRACKETS : '[' ']' ;
IDENT : [_a-zA-Z]+ NUM* ;
NUM : [0-9] ;
